update to use mp7
Signed-off-by: Gilbert Kwan <gkwan@ca.ibm.com>

--- a/README.adoc
+++ b/README.adoc
@@ -252,7 +252,7 @@ include::finish/inventory/src/main/java/io/openliberty/guides/inventory/Inventor
 
 This bean provides different utilities for the `inventory` service. Annotating the [hotspot=managedExecutor file=1]`managedExecutor` field with the [hotspot=managedExecutor file=1]`@Resource` annotation, an instance of the `ManagedScheduledExecutorService` resource will be injected when the bean is initialized by Liberty runtime.
 
-The [hotspot=getClientData file=1]`getClientData()` method uses the [hotspot=submit1 hotspot=submit2 hotspot=submit3 file=1]`managedExecutor` to submit multiple tasks in parallel. Each task uses the [hotspot=getSystemClient1 hotspot=getSystemClient2 hotspot=getSystemClient3 hotspot=getSystemClientMethod file=1]`getSystemClient()` method to get the REST client for the system hostname. Each client retrieves the [hotspot=osName hotspot=javaVer hotspot=heapSize file=1]`os.name` property, [hotspot=osName hotspot=javaVer hotspot=heapSize file=1]`java.version` property, and the [hotspot=osName hotspot=javaVer hotspot=heapSize file=1]`heap size` of the system.
+The [hotspot=getClientData file=1]`getClientData()` method uses the [hotspot=submit1 hotspot=submit2 hotspot=submit3 file=1]`managedExecutor` service to submit multiple tasks in parallel. Each task uses the [hotspot=getSystemClient1 hotspot=getSystemClient2 hotspot=getSystemClient3 hotspot=getSystemClientMethod file=1]`getSystemClient()` method to get the REST client for the system hostname. Each client retrieves the [hotspot=osName hotspot=javaVer hotspot=heapSize file=1]`os.name` property, [hotspot=osName hotspot=javaVer hotspot=heapSize file=1]`java.version` property, and the [hotspot=osName hotspot=javaVer hotspot=heapSize file=1]`heap size` of the system.
 
 The [hotspot=submitTask1 hotspot=submitTask2 hotspot=submitTask3 file=1]`submit()` tasks run in parallel. Each task returns a [hotspot=submit1 hotspot=submit2 hotspot=submit3 file=1]`Future<>` object immediately for the result of the asynchronous task. Use the [hotspot=get file=1]`get()` method to wait for the task to complete, and then retrieve the result.
 
